--- a/skin/browser.css
+++ b/skin/browser.css
@@ -25,3 +25,15 @@ toolbar #redisposition-button[disabled="yes"] {
 #redisposition-button:not([type="menu-button"]) {
     list-style-image: url("chrome://redisposition/skin/icon24.png") !important;
 }
+
+/* in browser window toolbar palette (Australis theme since Firefox 29) */
+
+#redisposition-button[cui-areatype="menu-panel"],
+toolbarpaletteitem[place="palette"] > #redisposition-button {
+    list-style-image: url("chrome://redisposition/skin/icon32.png");
+}
+
+#redisposition-button[cui-areatype="menu-panel"][disabled="yes"] {
+    filter: url("chrome://mozapps/skin/extensions/extensions.svg#greyscale");
+}
+
