--- a/skin/browser.css
+++ b/skin/browser.css
@@ -17,13 +17,7 @@ toolbar[iconsize="small"] #redisposition-button {
 }
 
 toolbar #redisposition-button[disabled="yes"] {
-    filter: url("chrome://mozapps/skin/extensions/extensions.svg#greyscale");
-}
-
-/* in customization panel */
-
-#redisposition-button:not([type="menu-button"]) {
-    list-style-image: url("chrome://redisposition/skin/icon24.png") !important;
+    filter: grayscale(100%);
 }
 
 /* in browser window toolbar palette (Australis theme since Firefox 29) */
@@ -34,6 +28,6 @@ toolbarpaletteitem[place="palette"] > #redisposition-button {
 }
 
 #redisposition-button[cui-areatype="menu-panel"][disabled="yes"] {
-    filter: url("chrome://mozapps/skin/extensions/extensions.svg#greyscale");
+    filter: grayscale(100%);
 }
 
